--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,7 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public",
-                "output": "/"
+                "input": "public"
               }
             ],
             "styles": [
